kubernetes_training/others/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: devops.itclabs.live 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: dev.itclabs.live 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-service
                port:
                  number: 5000
